cmp-gateway上传文件过滤
