# src/main/java/io/cmp/modules/gateway/controller/FileUploadController.java
@@ -18,8 +18,8 @@ import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
 import javax.servlet.http.HttpServletRequest;
-import java.io.IOException;
-import java.io.File;
+import javax.servlet.http.HttpServletResponse;
+import java.io.*;
 import java.text.SimpleDateFormat;
 import java.util.Date;
 import java.util.UUID;
@@ -39,35 +39,52 @@ public class FileUploadController {
         // MultipartFile是对当前上传的文件的封装，当要同时上传多个文件时，可以给定多个MultipartFile参数(数组)
         if (file.isEmpty()) {
             throw new RRException("上传文件不能为空");
-        }
-        Date date = new Date();
+        } else {
+            try {
+                Date date = new Date();
 
-        // 获取文件名
-        String fileName = file.getOriginalFilename();// 获取文件名
-        // 获取后缀
-        String suffixName = fileName.substring(fileName.lastIndexOf("."))
-                ;
-        // 重新生成唯一文件名，用于存储数据库
-        String newFileName = UUID.randomUUID().toString()+suffixName;
+                // 获取文件名
+                String fileName = file.getOriginalFilename();// 获取文件名
+                logger.info("fileName=" + fileName);
 
-        // 文件上产的路径
-        String filePath = location+new SimpleDateFormat("yyyy/MM/dd/").format(date)+newFileName;
+                // 获取后缀
+                String suffixName = fileName.substring(fileName.lastIndexOf("."));
+                // 重新生成唯一文件名，用于存储数据库
+                String newFileName = UUID.randomUUID().toString() + suffixName;
 
-        File savefile = new File(filePath);
-        //判断上传文件的保存目录是否存在
-        if (!savefile.exists() && !savefile.isDirectory()) {
-            logger.info(fileName+"目录不存在，需要创建");
-            //创建目录
-            savefile.mkdir();
+                logger.info("newFileName=" + newFileName);
+
+                String fileDirectory = new SimpleDateFormat("yyyy/MM/dd/").format(date);
+
+                // 文件上产的路径
+                String filePath = location + fileDirectory;
+                logger.info("filePath=" + filePath);
+
+                File fileCatalog = new File(filePath);
+                if(!fileCatalog.exists()){
+                    fileCatalog.mkdirs();
+                    logger.info("建目录=" + filePath);
+                }
+
+                File savefile = new File(filePath, newFileName);
+                FileUtils.copyToFile(file.getInputStream(),savefile);
+                //file.transferTo(savefile);
+
+                logger.info("原location=" + location);
+                String newLocation="";
+                if (location.contains("c:")) {
+                    newLocation = location.replace("c:", "");
+                    logger.info("newLocation=" + newLocation);
+                }
+
+                String strBackUrl = "http://" + request.getServerName() + ":" + request.getServerPort() + request.getContextPath() + newLocation + fileDirectory + newFileName;
+
+                logger.info("strBackUrl=" + strBackUrl);
+                return R.ok().put("url", strBackUrl);
+            } catch (IOException e) {
+                e.printStackTrace();
+                throw new RRException("上传文件失败");
+            }
         }
-        try {
-            // FileUtils.copyInputStreamToFile()这个方法里对IO进行了自动操作，不需要额外的再去关闭IO流
-            FileUtils.copyInputStreamToFile(file.getInputStream(), savefile);// 复制临时文件到指定目录下
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
-        return R.ok().put("url", filePath);
     }
-
-
 }
